# RustRoguelike

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  action_log.txt  config.json  config.yaml  follow.txt  issue147.txt  issue148.txt
backup/: config.json
backup/src/: display.rs  map.rs  tests.rs
resources/: MapTestChange.xp  Map_2.xp  Map_4.xp  Map_5.xp  Map_6.xp  TextLevel1.txt  Vault_Level1.csv  map.xp  maps.txt  spriteAtlas.txt
resources/procgen/: map1.yaml  map2.yaml
resources/test_logs/short_wall/: action_log.txt  map_config.txt  message_log.txt
resources/test_logs/simple/: message_log.txt
resources/tileset/: TileLocations.txt
resources/vaults/: Vaults - Vault1.csv  Vaults - Vault10.csv  Vaults - Vault11.csv  Vaults - Vault12.csv  Vaults - Vault13.csv  Vaults - Vault14.csv  Vaults - Vault15.csv  Vaults - Vault16.csv  Vaults - Vault17.csv  Vaults - Vault18.csv  Vaults - Vault19.csv  Vaults - Vault2.csv  Vaults - Vault20.csv  Vaults - Vault21.csv  Vaults - Vault22.csv  Vaults - Vault23.csv  Vaults - Vault25.csv  Vaults - Vault26.csv  Vaults - Vault27.csv  Vaults - Vault28.csv  Vaults - Vault29.csv  Vaults - Vault3.csv  Vaults - Vault30.csv  Vaults - Vault4.csv  Vaults - Vault5.csv  Vaults - Vault6.csv  Vaults - Vault7.csv  Vaults - Vault8.csv  Vaults - Vault9.csv
resources/xp/: MapTestChange.xp  Map_1.xp  Map_3.xp  map.xp  maps.txt
roguelike_core/: Cargo.toml
roguelike_core/src/: ai.rs  animation.rs  config.rs  constants.rs  entities.rs  generation.rs  level.rs  lib.rs  line.rs  map.rs  messaging.rs  movement.rs  perlin.rs  rng.rs  types.rs  utils.rs
roguelike_display/: Cargo.toml
roguelike_display/src/: animation.rs  display.rs  drawcmd.rs  lib.rs  load.rs  render.rs
roguelike_draw/: Cargo.toml
roguelike_draw/src/: animation.rs  area.rs  atlas.rs  drawcmd.rs  lib.rs  panel.rs  rl_draw.rs  spritesheet.rs
roguelike_engine/: Cargo.toml
roguelike_engine/src/: actions.rs  config.rs  console.rs  display.rs  game.rs  generation.rs  gui.rs  input.rs  lib.rs  log.rs  make_map.rs  map_construct.rs  plat.rs  procgen.rs  read_map.rs  render.rs  resolve.rs  selection.rs  step.rs  throttler.rs  vault.rs
roguelike_lib/: Cargo.toml
roguelike_lib/resources/: map.xp
roguelike_lib/src/: commands.rs  ffi.rs  lib.rs  main.rs  rl_engine.rs
roguelike_main/: Cargo.toml  config.json
roguelike_main/src/: ai.rs  animation.rs  console.rs  constants.rs  display.rs  drawcmd.rs  game.rs  generation.rs  imgui_wrapper.rs  input.rs  keyboard.rs  load.rs  main.rs  movement.rs  render.rs  replay.rs  style.rs  tests.rs  throttler.rs
roguelike_main/src/engine/: .display.rs.svx  .display.rs.svy  .display.rs.svz  ai.rs  config.rs  display.rs  gui.rs  input.rs  mod.rs  types.rs
roguelike_map/: Cargo.toml
roguelike_map/src/: lib.rs  map.rs  pathing.rs  types.rs  utils.rs
roguelike_utils/: Cargo.toml
roguelike_utils/src/: comp.rs  lib.rs  line.rs  math.rs  rng.rs
src/: .ai.rs.swp  .constants.rs.swp  .display.rs.swp  .main.rs.swp  .map.rs.swp  .types.rs.swp  ai.rs  constants.rs  display.rs  game.rs  imgui_wrapper.rs  input.rs  main.rs  map.rs  tests.rs  types.rs
src/engine/: ai.rs  display.rs  map.rs  mod.rs  types.rs
tools/: analyzer.py  commands.tcl  map_distribution.tcl  test_map.tcl
