[package]
name = "roguelike"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
tcod = "0.13"
rand = {version = "0.7.0", default-features = false, features = ["small_rng", "std"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
num = "0.2"
timer = "0.2"
chrono = "0.4"
rodio = "0.8"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
