[package]
name = "roguelike"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
tcod = "0.13"
rand = {version = "0.7.0", default-features = false, features = ["small_rng", "std"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
num = "0.2"
timer = "0.2"
chrono = "0.4"
rodio = "0.8"

ggez = "0.5.1"

gfx_core = "0.9"
gfx_device_gl = "0.16"

imgui = "0.1.0"
imgui-gfx-renderer = "0.1.0"

mint = "0.5.1"

rexpaint = "*"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true
