[package]
name = "roguelike_core"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
indexmap="1.3"

slotmap = "0.4"

rand = {version = "0.7.0", default-features = false, features = ["small_rng", "std"] }

pathfinding = "2.0"

symmetric-shadowcasting = "0.2"

euclid = { version = "0.20", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

symbol = "0.1"

itertools = "0.9"

smallvec = "1.4"

serde_yaml = "0.8"

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

