[package]
name = "roguelike_display"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.34", features = ["image", "unsafe_textures", "ttf"] }

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

gumdrop = "0.8"

bmp = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
rmp-serde = "*"
rmp = "*"

roguelike_utils = { path = "../roguelike_utils" }
roguelike_core = { path = "../roguelike_core" }
roguelike_engine = { path = "../roguelike_engine" }

