[package]
name = "roguelike_engine"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"

slotmap = "0.4"

rexpaint = "*"

symbol = "0.1"

pathfinding = "2.0"

mint = "0.5.1"

log = "0.4"
simple-logging = "2.0"

wfc_image = "0.10"
image = "*"

rand = {version = "0.7.0", default-features = false, features = ["small_rng", "std"] }

roguelike_core = { path = "../roguelike_core" }
