[package]
name = "roguelike_engine"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"

rexpaint = "*"

euclid = { version = "0.20", features = ["serde"] }

symbol = "0.1"

pathfinding = "2.0"

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

wfc_image = "0.11"
image = { version = "*", default-features = false, features = ["png"] }

rand = {version = "0.8", default-features = false, features = ["small_rng", "std"] }
oorandom = "11.1"

smallvec = "1.4"

roguelike_core = { path = "../roguelike_core" }
