[package]
name = "roguelike_engine"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"

euclid = { version = "0.20", features = ["serde"] }

pathfinding = "<= 2.0"

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

wfc-rs = "0.5.2"

rand = {version = "0.8", default-features = false, features = ["small_rng", "std"] }

smallvec = "1.4"

roguelike_utils = { path = "../roguelike_utils" }
roguelike_map = { path = "../roguelike_map" }
roguelike_core = { path = "../roguelike_core" }
