[package]
name = "roguelike_main"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
rand = {version = "0.7.0", default-features = false, features = ["small_rng", "std"] }
num = "0.2"

sdl2 = { version = "0.34", features = ["image", "unsafe_textures"] }

walkdir = "2"

indexmap="1.3"

noise = { version = "0.6", default-features = false }

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

roguelike_core = { path = "../roguelike_core" }
roguelike_engine = { path = "../roguelike_engine" }
