[package]
name = "roguelike_main"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"
default-run="rl"

[dependencies]
rand = {version = "0.7.0", default-features = false, features = ["small_rng", "std"] }

sdl2 = { version = "0.34", features = ["image", "unsafe_textures", "ttf"] }

walkdir = "2"

indexmap = "1.3"

noise = { version = "0.6", default-features = false }

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

gumdrop = "0.8"

bmp = "0.5"

roguelike_core = { path = "../roguelike_core" }
roguelike_engine = { path = "../roguelike_engine" }
roguelike_lib = { path = "../roguelike_lib" }

[[bin]]
name = "rl"
path = "src/main.rs"

