[package]
name = "roguelike_main"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"
default-run="rl"

[dependencies]
sdl2 = { version = "0.34", features = ["image", "unsafe_textures", "ttf"] }

indexmap = "1.3"

log = "0.4"
simple-logging = "2.0"
logging_timer = "1.0"

gumdrop = "0.8"

bmp = "0.5"

roguelike_core = { path = "../roguelike_core" }
roguelike_engine = { path = "../roguelike_engine" }
roguelike_lib = { path = "../roguelike_lib" }

[[bin]]
name = "rl"
path = "src/main.rs"

