[package]
name = "roguelike_map"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
pathfinding = "<= 2.0"

symmetric-shadowcasting = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

itertools = "0.9"

smallvec = "1.4"

#log = "0.4"
#simple-logging = "2.0"
#logging_timer = "1.0"

roguelike_utils = { path = "../roguelike_utils" }

